iptables/rules.v4
# Basic IPTABLES stateful firewall template
# github.com/edburnett/dotfiles

*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
:sshguard - [0:0]

# accept already established incoming connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# allow loopback, drop all traffic to local that isn't from lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Drop packets with invalid headers, checksums, flags, out of sequence, etc
-A INPUT -m conntrack --ctstate INVALID -j DROP

# accept new ping requests. the rest is handled by related,established
-A INPUT -p icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT

# attach the TCP and UDP chains to the INPUT chain
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP

# Allow all outbound
-A OUTPUT -j ACCEPT

# sshguard
-A INPUT -j sshguard

# allowed incoming ports/services
-A INPUT -p tcp --dport 22 -j ACCEPT
#-A INPUT -p tcp --dport 25 -j ACCEPT
#-A INPUT -p udp --dport 25 -j ACCEPT
#-A INPUT -p tcp --dport 110 -j ACCEPT
#-A INPUT -p tcp --dport 143 -j ACCEPT
#-A INPUT -p tcp --dport 995 -j ACCEPT
#-A INPUT -p tcp --dport 993 -j ACCEPT
#-A INPUT -p tcp --dport 465 -j ACCEPT
#-A INPUT -p tcp --dport 587 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# allow mongodb only from certain address(es)
#-A INPUT -p tcp --dport 27017 -s 192.168.0.2 -j ACCEPT
#-A INPUT -p tcp --dport 27017 -s 192.168.0.1 -j ACCEPT

# log denied
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# reject TCP connections with TCP RST packets and UDP streams
# with ICMP unreachable messages if the ports are not opened
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

# drop everything else with no error
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
